putting example to show to_load file in git

--- a/WorkingCode.ipynb
+++ b/WorkingCode.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "id": "056660c2-59cf-4cb1-971f-8fa26c53edfc",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "id": "d78a24e1-26d6-4b92-b8c9-b8dd0b571b76",
    "metadata": {},
    "outputs": [
@@ -77,10 +77,12 @@
        "{'seed55_decks100_timestamp2025-03-01-21-22-47-508625.npy': {'seed': 55,\n",
        "  'n': 100},\n",
        " 'seed55_decks100_timestamp2025-03-01-21-23-15-052350.npy': {'seed': 55,\n",
+       "  'n': 100},\n",
+       " 'seed55_decks100_timestamp2025-03-01-21-26-06-093154.npy': {'seed': 55,\n",
        "  'n': 100}}"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
