Grammar check and update of comments

--- a/WorkingCode.ipynb
+++ b/WorkingCode.ipynb
@@ -57,17 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "056660c2-59cf-4cb1-971f-8fa26c53edfc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating a deck variable that has the number of random decks generated with a random seed\n",
     "deck = src.datagen.get_decks(100,55)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "d78a24e1-26d6-4b92-b8c9-b8dd0b571b76",
    "metadata": {},
    "outputs": [
@@ -88,14 +89,13 @@
     }
    ],
    "source": [
-    "#as you can see from the output, it tells you that I ran this three times\n",
-    "#twice with n=100 and seed=31\n",
+    "# codes to store the decks. It needs n_decks, a random seed, and the deck variable from the above cell\n",
     "src.datagen.store_decks(100,55,deck)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "947c47bd-ca4e-4ede-a233-7aa2a5ff63a4",
    "metadata": {},
    "outputs": [
@@ -109,22 +109,24 @@
     }
    ],
    "source": [
+    "# code to score the decks and update their location\n",
     "src.processing.update_score()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "8c421fd8-508c-48a7-ad0d-795909037629",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# variable created for the calculated probability\n",
     "matrix = src.computing.calc_probability()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "7e773023-c44d-4b42-ba0a-456adb1939c6",
    "metadata": {},
    "outputs": [
@@ -150,6 +152,7 @@
     }
    ],
    "source": [
+    "# code for the heatmap visualization\n",
     "src.visualization.decks_heatmap(matrix, 100)"
    ]
   },
@@ -164,7 +167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -178,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
